--- a/css/style.production.css
+++ b/css/style.production.css
@@ -103,7 +103,7 @@ fieldset {
 }
 
 .profile {
-  max-width: 700px;
+  max-width: 1000px;
   margin: 150px auto;
 }
 
@@ -346,7 +346,7 @@ th, td {
 tr:nth-child(even){background-color: #f2f2f2}
 
 th {
-  background-color: #2b930d;
+  background-color: var(--primary-color);
   color: white;
 }
 
